Updated Unofficial search plugins (mediawiki)

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -242,7 +242,7 @@ Mejor Torrent]
 | 1.22
 | 19/Oct<br />2020
 | [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/pctmix.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| ✔ qbt 4.3.x / python 3.5.0
+| ✔ qbt 4.3.x / python 3.5.0<br />❗ domain expired
 |-
 | [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
 [https://pctreload.com/ PCTReload]
