Updated ggn search engine

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -456,7 +456,7 @@ Mejor Torrent]
 | 1.30
 | 13/Apr<br />2017
 | [https://raw.githubusercontent.com/Ooggle/qbittorrent-search-plugins/master/engines/gazellegames.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br />[https://github.com/Ooggle/qbittorrent-search-plugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| ✔ qbt 4.4w.x / python 3.9+
+| ✔ qbt 4.4.x / python 3.9+
 |-
 | [[https://github.com/txtsd/qB-IPT/raw/master/iptorrents.png]] [https://iptorrents.com IPTorrents]
 | [https://github.com/txtsd/qB-IPT txtsd (qB-IPT)]
