--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -535,4 +535,8 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.py [[https://raw.githubusercontent.com/Pireo/hello-world/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | ❗ Working when DDOS cloudfare<br />protection is disabled
 |}
+
+Download all unofficial search plugins at once: (https://github.com/qbittorrent/search-plugins/files/10294954/All.unofficial.search.plugins.zip)
+
 ''*All files'' is a tarball (.tar.gz) containing script, icon, README & INSTALL files.
+
