--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -374,7 +374,7 @@ Mejor Torrent]
 | ✔ qbt 4.0.x / python 3.5.0
 |-
 | [[https://github.com/menegop/qbfrench/blob/master/torrent9.png]] 
-[http://torent9.fr  Torrent9]
+[https://www.torrent9.fm  Torrent9]
 | [https://raw.githubusercontent.com/menegop/qbfrench menegop]
 | 2.0
 |01/Jan<br />2023
