Added bt4gprx plugin as the bt4g URL has changed and the bt4g plugin is no longer working

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -72,6 +72,13 @@ The minimum supported Python version (across all platforms) is specified at [htt
 | [https://raw.githubusercontent.com/kjjejones44/b4tg_search_plugin/master/bt4g.py [[https://raw.githubusercontent.com/Pireo/hello-world/master/Download.gif]] ]
 | ✔ qbt 4.1.x / python 3.5.0
 |-
+| [[https://github.com/libellula/Official-search-engines-plugins-favicons/blob/main/bt4gfavicon-16x16.png]] [https://bt4gprx.com/ bt4gprx]
+| [https://github.com/TuckerWarlock/qbittorrent-search-plugins TuckerWarlock]
+| 2.0
+| 27/Aug<br />2023
+| [https://github.com/TuckerWarlock/qbittorrent-search-plugins/blob/main/bt4gprx.py [[https://raw.githubusercontent.com/Pireo/hello-world/master/Download.gif]] ]
+| ✔ qbt 4.5.x / python 3.10.x
+|-
 | [[https://github.com/Pireo/hello-world/blob/master/etree.png]] [http://bt.etree.org/ bt.etree.org]
 | [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
 | 1.2
