--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -110,10 +110,10 @@ The minimum supported Python version (across all platforms) is specified at [htt
 | [[https://github.com/menegop/qbfrench/blob/master/cpasbien.png]] 
 [http://www.cpasbien.moe  Cpasbien]
 | [https://github.com/MarcBresson/cpasbien MarcBresson]
-| 2.1
-|13 Sept/<br />2023
-| [https://raw.githubusercontent.com/MarcBresson/cpasbien/master/cpasbien.py [[https://github.com/MarcBresson/cpasbien/blob/master/Download.gif]]]
-| ✔ qbt 4.5.0 / python 3.8
+| 2.2
+|24/Dec<br />2023
+| [https://raw.githubusercontent.com/MarcBresson/cpasbien/master/src/cpasbien.py [[https://github.com/MarcBresson/cpasbien/blob/master/assets/Download.gif]]]
+| ✔ qbt 4.5.x / python 3.11.x
 |-
 | [[https://github.com/camilobot/qb-cubonegro/blob/main/favicon.png]]
 [https://cubonegro.org cubonegro]
